--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="profile">
       <img src="images/profile.png" class="profilelo" alt="profile">
       <h2>Hello.</h2>
-      <p class="intro">My name is Biraj Mishra_Curently perparing for 11 class entrance exam_loves to learn coding</p>
+      <p class="intro">My name is Biraj Mishra_Curently perparing for 11 class entrance exam_loves to learn coding(Caught red handedly)
+
+</p>
     </div>
     <hr>
     <div class="skills">
