--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="profile">
       <img src="images/profile.png" class="profilelo" alt="profile">
       <h2>Hello.</h2>
-      <p class="intro">My name is Biraj Mishra_Curently perparing for 11 class entrance exam_loves to learn coding(Caught red handedly)
+      <p class="intro">My name is Biraj Mishra_Curently preparing for 11 class entrance exam_loves to learn to code (Caught red-handedly)
 
 </p>
     </div>
@@ -36,7 +36,8 @@
       <div class="skill-row">
         <img class="gaming" src="images/controller.png" alt="">
         <h3 class="gm">Learning e-games</h3>
-        <p> I can play any games in competitive level if someone provide me enough time. loves to play games</p>
+        <p>I can play any games at a competitive level if someone provides me enough time. loves to play games
+</p>
       </div>
     </div>
     <hr>
